--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <footer>
         <p>&copy; 2024 PopcornMan55D. All rights reserved.</p>
+        <p>salut tommy hahaha</p>
     </footer>
 </body>
 </html>
