--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <footer>
         <p>&copy; 2024 PopcornMan55D. All rights reserved.</p>
-        <img src="img.png" alt="Diskord">
+        <img src="Capture d'écran 2024-03-02 114914.png" alt="Diskord">
     </footer>
 </body>
 </html>
