--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 PopcornMan55D. All rights reserved.</p>
-        <img src="Capture d'écran 2024-03-02 114914.png" alt="Diskord">
+        <p>&copy; 2024 PopcornMan55D. All rights reserved (in a box).</p>
     </footer>
 </body>
 </html>
